--- a/styles.css
+++ b/styles.css
@@ -1,33 +1,16 @@
+* {
+  padding: 0px;
+  margin: 0px;
+}
 body {
-  background: ''#f3f3'';
+  background: rgb(65, 64, 64);
+}
+div {
+  opacity: .7
 }
 #contenedor {
-    margin: auto;
-    width: 50%;
-    border: 3px solid green;
-    padding: 10px;
-    clear: both;
-    display: table;
-  }
-  #container2 {
-    margin: auto;
-    width: 50%;
-    border: 3px solid green;
-    padding: 10px;
-    clear: both;
-    display: table;
-  }
-  #container3 {
-    margin: auto;
-    width: 50%;
-    border: 3px solid green;
-    padding: 10px;
-    clear: both;
-    display: table;
-  }
-  #container4 {
-    margin: auto;
-    width: 50%;
+    margin-top: 100px;
+    width: auto;
     border: 3px solid green;
     padding: 10px;
     clear: both;
@@ -42,7 +25,6 @@ body {
     float: left;
     padding: 5px;
   }
-  
   .circulo {
     margin: 10px;
     width: 100px;
@@ -56,52 +38,39 @@ body {
     padding: 5px;
   }
   .triangulo {
-    margin-top: 10px;
-    margin-left: 10px;
-    margin-bottom: 10px;
-    width: 0; 
-    height: 0; 
-    border-left: 100px solid #f0ad4e;
-    border-top: 50px solid transparent;
-    border-bottom: 50px solid transparent; 
-    float: left;
-    padding-left: 5px;
-    padding-top: 5px;
-    padding-bottom: 5px;
-  }
-
-  .cuadrado2 {
-    margin: 10px;
-    margin-left: 50px;
-    width: 100px; 
-    height: 100px; 
-    background: #1aa73d;
-    float: left;
-    padding: 5px;
-  }
-  
-  .circulo2 {
-    margin: 10px;
-    width: 100px;
-    height: 100px;
-    -moz-border-radius: 50%;
-    -webkit-border-radius: 50%;
-    border-radius: 50%;
-    background: #5cb85c;
-    background: #116ec5;
-    float: left;
-    padding: 5px;
-  }
-  .triangulo2 {  
-    margin: 10px;
-    width: 50px; 
-    height: 0px; 
-    border-left: 110px solid #f0ad4e;
+    width: 50px;
+    height: 0px;
     border-top: 55px solid transparent;
-    border-bottom: 55px solid transparent; 
-    float: left;
-    padding: 0px;
+    border-left: 110px solid #3c175a;
+    border-bottom: 55px solid transparent;
+    justify-content: space-between;
   }
-  margin: 50%;
 
+  .circulo {
+    animation-name: slide-right;
+    animation-duration: 6s;
+    animation-iteration-count: infinite;
+  }
   
+  @keyframes slide-right {
+  
+    from {
+      margin-left: 0px;
+      opacity: 1;
+    }
+  
+    25% {
+      margin-left: 110px;
+      opacity: 1;
+    }
+    25% {
+      margin-left: 110px;
+      opacity: 0.3;
+    }
+  
+    to {
+      margin-left: 200px;
+      opacity: 0.0;
+    }
+  
+  }
